:hammer: fix overflow of title

--- a/src/pages/projects.module.css
+++ b/src/pages/projects.module.css
@@ -78,8 +78,9 @@
 @media only screen and (max-width: 1100px) {
   .title {
     margin-bottom: 0.4em;
+    font-size: 2.8em;
+    letter-spacing: 0.5em;
   }
-
   .projectImgContainer {
     position: relative;
     float: left;
@@ -104,7 +105,7 @@
     font-size: 2.8em;
     font-family: "Oswald";
     font-weight: 300;
-    letter-spacing: 0.5em;
+    letter-spacing: 0.3em;
   }
 
   /*.projectImgContainer {
